# sample/dto.go
@@ -1,6 +1,0 @@
-package sample
-
-type SampleDto struct {
-	Id   int64  `json:"id"`
-	Name string `json:"name"`
-}
